--- a/todolist.css
+++ b/todolist.css
@@ -175,6 +175,8 @@
 .editInput {
     background: white;
     margin-right: 40px;
+    border-radius: 5px;
+    height: 25px;
 }
 
 .confirmBtn {
@@ -231,4 +233,38 @@
     height: 24px;
     width: 24px;
     background-color: #C7253E;
+}
+
+
+.profileIcon {
+    position: absolute;
+    top: 30px;
+    left: 20px;
+    height: 70px;
+    width: 70px;
+    background-color: #CD5C08;
+    border-radius: 100px;
+    cursor: pointer;
+    box-shadow: #974506 10px 10px 5px;
+}
+
+.profileContainer {
+    position: absolute;
+    top: 20px;
+    left: 120px;
+    background-color: #FFF5E4;
+    height: 100px;
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: #974506 10px 10px 5px;
+}
+
+.phoneNumber-box {
+    background-color: #FFF5E4;
+    margin: 20px;
+}
+
+.email-box {
+    background-color: #FFF5E4;
+    margin: 20px;
 }
